Agregando Material List

--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  movie-list works!
-</p>
+<mat-list>
+  <mat-list-item>Movie 1</mat-list-item>
+  <mat-list-item>Movie 2</mat-list-item>
+  <mat-list-item>Movie 3</mat-list-item>
+</mat-list>
